[fix]: (css) 공용버튼 gap, font 수정

--- a/hcnc_init/src/main/resources/static/css/ui-style.css
+++ b/hcnc_init/src/main/resources/static/css/ui-style.css
@@ -55,7 +55,7 @@
 
  .btn-area {
      display: flex;
-     gap: 10px;
+     gap: 8px;
  }
 
  .btn-area button,
@@ -67,8 +67,8 @@
     padding: 11px 12px;
     border: 1px solid #c5ccd5;
     background: #fff;
-    color: #1e2e41;
-    font-size: 16px;
+    color: #000000;
+    font-size: 15px;
     font-weight: 600;
     line-height: 1;
     cursor: pointer;
@@ -108,7 +108,7 @@
     background-size:20px;
     color: #fff;
     /*font-size: 14px;*/
-    font-weight: 600;
+    font-weight: 700;
     cursor: pointer;
  }
  /* .search-btn-area .btn-search:hover{
